# ComfyUI-Llama-Prompt-Generator

./: .gitignore  CHANGELOG.md  README.md  __init__.py  pyproject.toml  requirements.txt
js/: prompt_generator_pro.js  ui_palette.js
nodes/: prompt_generator.py  prompt_generator_options.py  prompt_generator_pro.py
prompts/: image_action_prompt.txt  image_custom_system_prompt.txt  image_default_system_prompt.txt  json_system_prompt.txt  text_image_system_prompt.txt  text_video_system_prompt.txt
prompts/presets/: Clean Cinematic Enhancer.txt
py/: ideogram_caption.py  model_manager.py  ollama_wrapper.py
