[project]
name = "comfyui-llama-prompt-generator"
description = "A single ComfyUI node that runs a local LLM (llama.cpp or Ollama) to enhance prompts, analyze images, and produce structured Ideogram 4 captions, with a custom Generator/Options UI."
version = "1.5.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

# torch/numpy are provided by ComfyUI and are GPU-build-sensitive — do NOT declare them
# here, or a Registry/pip install can clobber your CUDA torch with a CPU build.
dependencies = ["requests", "huggingface_hub", "psutil", "tqdm", "Pillow", "colorama"]

[project.urls]
Repository = "https://github.com/GlatTissekone/ComfyUI-Llama-Prompt-Generator"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/GlatTissekone/ComfyUI-Llama-Prompt-Generator#readme"
"Bug Tracker" = "https://github.com/GlatTissekone/ComfyUI-Llama-Prompt-Generator/issues"

[tool.comfy]
# NOTE: to publish to the Comfy Registry, set PublisherId to YOUR registry publisher id.
PublisherId = "glattissekone"
DisplayName = "ComfyUI-Llama-Prompt-Generator"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
